# VoiceGenderPavlok

./: build.gradle  build.gradle.kts  requirements.txt  settings.gradle  settings.gradle.kts
app/src/main/cpp/: CMakeLists.txt  essentia-bridge.cpp  essentia_jni.cpp  essentia_wrapper.cpp  essentia_wrapper.h  find_polynomial_roots_jenkins_traub.cc  formant_analyzer.cpp  formant_analyzer.h  formant_jni.cpp  simple_resampler.h  voice_analysis_engine.cpp
app/src/main/cpp/eigen/Eigen/: AccelerateSupport  Cholesky  CholmodSupport  Core  Eigenvalues  Geometry  Householder  IterativeLinearSolvers  Jacobi  KLUSupport  LU  MetisSupport  OrderingMethods  PaStiXSupport  PardisoSupport  QR  QtAlignedMalloc  SPQRSupport  SVD  SparseCholesky  SparseCore  SparseLU  SparseQR  StdDeque  StdList  StdVector  SuperLUSupport  ThreadPool  UmfPackSupport
app/src/main/cpp/eigen/Eigen/src/Core/: ArrayBase.h  DenseBase.h  MatrixBase.h
app/src/main/cpp/eigen/Eigen/src/Core/arch/AVX/: Complex.h  MathFunctions.h  PacketMath.h  Reductions.h  TypeCasting.h
app/src/main/cpp/eigen/Eigen/src/Core/arch/AVX512/: Complex.h  GemmKernel.h  MathFunctions.h  MathFunctionsFP16.h  PacketMath.h  PacketMathFP16.h  Reductions.h  TrsmKernel.h  TypeCasting.h  TypeCastingFP16.h
app/src/main/cpp/eigen/Eigen/src/Core/arch/AltiVec/: Complex.h  MathFunctions.h  MatrixProduct.h  MatrixProductCommon.h  MatrixProductMMA.h  MatrixVectorProduct.inc  PacketMath.h  TypeCasting.h
app/src/main/cpp/eigen/Eigen/src/Core/arch/Default/: BFloat16.h  ConjHelper.h  GenericPacketMathFunctions.h  GenericPacketMathFunctionsFwd.h  Half.h
app/src/main/cpp/eigen/Eigen/src/Core/arch/GPU/: MathFunctions.h  PacketMath.h  TypeCasting.h
app/src/main/cpp/eigen/Eigen/src/Core/arch/LSX/: Complex.h  GeneralBlockPanelKernel.h  MathFunctions.h  PacketMath.h  TypeCasting.h
app/src/main/cpp/eigen/Eigen/src/Core/arch/MSA/: Complex.h  MathFunctions.h  PacketMath.h
app/src/main/cpp/eigen/Eigen/src/Core/arch/NEON/: Complex.h  GeneralBlockPanelKernel.h  MathFunctions.h  PacketMath.h  TypeCasting.h  UnaryFunctors.h
app/src/main/cpp/eigen/Eigen/src/Core/arch/SSE/: Complex.h  MathFunctions.h  PacketMath.h  Reductions.h  TypeCasting.h
app/src/main/cpp/eigen/Eigen/src/Core/arch/SVE/: MathFunctions.h  PacketMath.h  TypeCasting.h
app/src/main/cpp/eigen/Eigen/src/Core/arch/SYCL/: InteropHeaders.h  MathFunctions.h  PacketMath.h  TypeCasting.h
app/src/main/cpp/eigen/Eigen/src/Core/arch/ZVector/: Complex.h  MathFunctions.h  PacketMath.h
app/src/main/cpp/eigen/Eigen/src/Core/functors/: AssignmentFunctors.h  BinaryFunctors.h  NullaryFunctors.h  StlFunctors.h  TernaryFunctors.h  UnaryFunctors.h
app/src/main/cpp/eigen/Eigen/src/Core/products/: GeneralBlockPanelKernel.h  GeneralMatrixMatrix.h  GeneralMatrixMatrixTriangular.h  GeneralMatrixMatrixTriangular_BLAS.h  GeneralMatrixMatrix_BLAS.h  GeneralMatrixVector.h  GeneralMatrixVector_BLAS.h  Parallelizer.h  SelfadjointMatrixMatrix.h  SelfadjointMatrixMatrix_BLAS.h  SelfadjointMatrixVector.h  SelfadjointMatrixVector_BLAS.h  SelfadjointProduct.h  SelfadjointRank2Update.h  TriangularMatrixMatrix.h  TriangularMatrixMatrix_BLAS.h  TriangularMatrixVector.h  TriangularMatrixVector_BLAS.h  TriangularSolverMatrix.h  TriangularSolverMatrix_BLAS.h  TriangularSolverVector.h
app/src/main/cpp/eigen/Eigen/src/Core/util/: BlasUtil.h  ConfigureVectorization.h  Constants.h  EmulateArray.h  ForwardDeclarations.h  IndexedViewHelper.h  IntegralConstant.h  MKL_support.h  Macros.h  Memory.h  Meta.h  MoreMeta.h  ReshapedHelper.h  SymbolicIndex.h  XprHelper.h
app/src/main/cpp/eigen/Eigen/src/Geometry/arch/: Geometry_SIMD.h
app/src/main/cpp/eigen/Eigen/src/LU/arch/: InverseSize4.h
app/src/main/cpp/eigen/Eigen/src/SparseCore/: SparseMatrixBase.h
app/src/main/cpp/eigen/unsupported/Eigen/: AdolcForward  AlignedVector3  ArpackSupport  AutoDiff  BVH  CMakeLists.txt  EulerAngles  FFT  IterativeSolvers  KroneckerProduct  LevenbergMarquardt  MPRealSupport  MatrixFunctions  NNLS  NonLinearOptimization  NumericalDiff  OpenGLSupport  Polynomials  SparseExtra  SpecialFunctions  Splines
app/src/main/cpp/eigen/unsupported/Eigen/CXX11/: Tensor  TensorSymmetry  ThreadPool
app/src/main/cpp/eigen/unsupported/Eigen/src/Eigenvalues/: ArpackSelfAdjointEigenSolver.h
app/src/main/cpp/eigen/unsupported/Eigen/src/IterativeSolvers/: DGMRES.h
app/src/main/cpp/eigen/unsupported/Eigen/src/SparseExtra/: SparseInverse.h
app/src/main/cpp/eigen/unsupported/Eigen/src/Splines/: SplineFitting.h  SplineFwd.h
app/src/main/cpp/eigen/unsupported/doc/examples/: BVH_Example.cpp  EulerAngles.cpp  FFT.cpp  MatrixExponential.cpp  MatrixFunction.cpp  MatrixLogarithm.cpp  MatrixPower.cpp  MatrixPower_optimal.cpp  MatrixSine.cpp  MatrixSinh.cpp  MatrixSquareRoot.cpp  PolynomialSolver1.cpp  PolynomialUtils1.cpp
app/src/main/cpp/eigen/unsupported/doc/examples/SYCL/: CwiseMul.cpp
app/src/main/cpp/eigen/unsupported/test/: BVH.cpp  CMakeLists.txt  EulerAngles.cpp  NNLS.cpp  NonLinearOptimization.cpp  NumericalDiff.cpp  alignedvector3.cpp  autodiff.cpp  autodiff_scalar.cpp  bessel_functions.cpp  cxx11_tensor_argmax_sycl.cpp  cxx11_tensor_broadcast_sycl.cpp  cxx11_tensor_builtins_sycl.cpp  cxx11_tensor_concatenation_sycl.cpp  cxx11_tensor_contract_sycl.cpp  cxx11_tensor_convolution_sycl.cpp  cxx11_tensor_custom_op_sycl.cpp  cxx11_tensor_device_sycl.cpp  cxx11_tensor_forced_eval_sycl.cpp  cxx11_tensor_generator_sycl.cpp  cxx11_tensor_image_op_sycl.cpp  cxx11_tensor_image_patch_sycl.cpp  cxx11_tensor_inflation_sycl.cpp  cxx11_tensor_math_sycl.cpp  cxx11_tensor_morphing_sycl.cpp  cxx11_tensor_of_float16_sycl.cpp  cxx11_tensor_padding_sycl.cpp  cxx11_tensor_random_sycl.cpp  cxx11_tensor_reduction_sycl.cpp  cxx11_tensor_reverse_sycl.cpp  cxx11_tensor_scan_sycl.cpp  cxx11_tensor_shuffling_sycl.cpp  cxx11_tensor_striding_sycl.cpp  cxx11_tensor_sycl.cpp  cxx11_tensor_volume_patch_sycl.cpp  dgmres.cpp  fft_test_shared.h  forward_adolc.cpp  idrstabl.cpp  levenberg_marquardt.cpp  (+7 more)
app/src/main/cpp/essentia/: version.h
app/src/main/cpp/include/essentia/: version.h
(+108 files in other folders)
